[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Font/RobotoSlabBold-PKGJr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Main Scene.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Game Icons/trophy.png" type="Texture" id=3]
[ext_resource path="res://assets/Game Icons/gear.png" type="Texture" id=4]
[ext_resource path="res://assets/Game Icons/information.png" type="Texture" id=5]
[ext_resource path="res://assets/Game Icons/gamepad.png" type="Texture" id=7]
[ext_resource path="res://assets/Game Icons/save.png" type="Texture" id=8]
[ext_resource path="res://assets/Game Icons/exitLeft.png" type="Texture" id=9]
[ext_resource path="res://assets/Game Icons/warning.png" type="Texture" id=10]
[ext_resource path="res://scripts/Main.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
margin_left = 69.0784
margin_top = 30.8242
margin_right = 1196.08
margin_bottom = 136.825
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Path To Chemistry Dev Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Background"]
margin_left = 512.0
margin_top = 176.0
margin_right = 768.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PLAY"
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lab" type="Button" parent="Background"]
margin_left = 512.0
margin_top = 312.0
margin_right = 768.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lab"
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Background"]
margin_left = 512.0
margin_top = 448.0
margin_right = 768.0
margin_bottom = 554.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Save"
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Background"]
margin_left = 512.0
margin_top = 584.0
margin_right = 768.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Exit"
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="TextureButton" parent="Background"]
margin_left = 896.0
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 704.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Background"]
margin_left = 1016.0
margin_top = 576.0
margin_right = 1160.0
margin_bottom = 712.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Background"]
margin_left = 1145.78
margin_top = 590.218
margin_right = 1257.78
margin_bottom = 702.218
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/Lab" to="." method="_on_Lab_pressed"]
[connection signal="pressed" from="Background/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Background/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Background/Credits" to="." method="_on_Credits_pressed"]
